# rag-eval-lab

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: exp_001_chunk256_ada.yaml  exp_001_llamaindex.yaml  exp_002_chunk512_ada.yaml  exp_002_llamaindex.yaml  exp_003_chunk128_topk10.yaml  exp_003_llamaindex.yaml  exp_004_chunk256_topk3.yaml  exp_004_llamaindex.yaml
scripts/: evaluate_run.py  generate_architecture_image.py  generate_benchmark.py  generate_report.py  ingest_corpus.py  log_to_mlflow.py  run_cp3_all.sh  run_cp4_all.sh  run_cp7_all.sh  run_cp8_all.sh  run_experiment.py  run_llamaindex_experiment.py
src/rag_eval_lab/config/: loader.py  schema.py
src/rag_eval_lab/evaluation/: judge.py  metrics.py
src/rag_eval_lab/ingestion/: chunker.py  embedder.py  ingest.py  pinecone_store.py
src/rag_eval_lab/llamaindex/: __init__.py  indexer.py  retriever.py  runner.py
src/rag_eval_lab/qa_generation/: dataset.py  generator.py  validator.py
src/rag_eval_lab/rag/: __init__.py  generator.py  retriever.py  runner.py
src/rag_eval_lab/tracking/: mlflow_logger.py
src/rag_eval_lab/utils/: io.py  llm_client.py  logging.py
tests/: conftest.py  test_bootstrap.py  test_chunker.py  test_config_loader.py  test_cp8.py  test_evaluation.py  test_llamaindex.py  test_qa_validator.py  test_runner.py
